--- a/src/assets/scss/screen.scss
+++ b/src/assets/scss/screen.scss
@@ -1,5 +1,6 @@
 @use "./components/authentication";
 @use "./components/friendlist";
+@use "./components/friends";
 @use "./components/notification";
 @use "./components/payment-process";
 @use "./components/pod-order";
