--- a/src/assets/scss/components/_notification.scss
+++ b/src/assets/scss/components/_notification.scss
@@ -40,7 +40,6 @@
 }
 
 #notifications {
-    pointer-events: none;
     z-index: 200;
     position: relative;
     padding-top: 0.5rem;
@@ -79,6 +78,26 @@
             font-size: 0.9rem;
             margin-left: 2.5rem;
         }
+        
+        &.prompt p {
+            flex-grow: 1;
+        }
+
+        button {
+            background: transparent;
+            border: 0;
+            &:focus {
+                outline: none;
+            }
+
+            &.accept {
+                color: util.$accent-green;
+            }
+
+            &.deny {
+                color: util.$accent-red;
+            }
+        }
 
         &.danger::before {
             background-image: linear-gradient(90deg, rgba(120,42,42,1) 0%, rgba(103,51,52,1) 11%, rgba(77,38,42,1) 22%, rgba(17,34,51,1) 45%);
@@ -94,6 +113,7 @@
 
         &::before {
             content: "";
+            pointer-events: none;
             position: absolute;
             width: 100%;
             height: 100%;
