--- a/src/assets/scss/components/_settings.scss
+++ b/src/assets/scss/components/_settings.scss
@@ -48,7 +48,7 @@
                     line-height: 8rem;
                     font-size: 2rem;
                     color: white;
-                    text-transform: capitalize;
+                    text-transform: uppercase;
                 }
             }
 
