--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -246,13 +246,21 @@
 #friendlist ul li {
   flex-shrink: 0;
   margin: 1rem 0;
-}
-#friendlist ul li figure {
   text-align: center;
 }
-#friendlist ul li figure img {
-  width: 4rem;
+#friendlist ul li .user-icon {
   border-radius: 50%;
+}
+#friendlist ul li .user-icon h2 {
+  width: 4rem;
+  height: 4rem;
+  background: grey;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 4rem;
+  font-size: 1rem;
+  color: white;
+  text-transform: uppercase;
 }
 #friendlist ul li .add {
   background-color: #eff1f4;
@@ -320,6 +328,20 @@
 #friends-settings > ul {
   width: 100%;
   box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
+}
+#friends-settings > ul .user-icon {
+  border-radius: 50%;
+}
+#friends-settings > ul .user-icon h2 {
+  width: 1rem;
+  height: 1rem;
+  background: grey;
+  border-radius: 50%;
+  text-align: center;
+  line-height: 1rem;
+  font-size: 0.25rem;
+  color: white;
+  text-transform: uppercase;
 }
 #friends-settings > ul > li {
   padding: 1rem;
