--- a/src/assets/scss/_util.scss
+++ b/src/assets/scss/_util.scss
@@ -108,3 +108,25 @@
         0 35px 80px rgba(0, 0, 0, 0.07)
     ;
 }
+
+@mixin user-icon($size, $outline:false) {
+    .user-icon {
+        border-radius: 50%;
+        @if ($outline) {
+            padding: 0.2rem;
+            border: 1px solid darken($background-secondary, 20%);
+        }
+        
+        h2 {
+            width: $size;
+            height: $size;
+            background: grey;
+            border-radius: 50%;
+            text-align: center;
+            line-height: $size;
+            font-size: $size * 0.25;
+            color: white;
+            text-transform: uppercase;
+        }
+    }
+}
