--- a/src/assets/scss/components/_settings.scss
+++ b/src/assets/scss/components/_settings.scss
@@ -34,23 +34,7 @@
         .user-icon-wrapper {
             margin: 1rem 0;
             
-            .user-icon {
-                border-radius: 50%;
-                padding: 0.2rem;
-                border: 1px solid darken(util.$background-secondary, 20%);
-                
-                h2 {
-                    width: 8rem;
-                    height: 8rem;
-                    background: grey;
-                    border-radius: 50%;
-                    text-align: center;
-                    line-height: 8rem;
-                    font-size: 2rem;
-                    color: white;
-                    text-transform: uppercase;
-                }
-            }
+            @include util.user-icon(8rem, true);
 
             h3 {
                 margin-top: 0.5rem;
