--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -1129,6 +1129,59 @@
   float: right;
 }
 
+#subscription-settings {
+  z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 100%;
+  background-color: #fbfcff;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  transition: transform 0.3s ease-in-out;
+  will-change: transform;
+}
+#subscription-settings.active {
+  transform: translateX(-100%);
+}
+#subscription-settings header {
+  position: relative;
+  padding: 8rem 0;
+  font-size: 2rem;
+  text-align: center;
+}
+#subscription-settings header .back {
+  position: absolute;
+  left: 1rem;
+  bottom: 1rem;
+  width: 2rem;
+  height: 2rem;
+  border: 0;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 1rem;
+}
+#subscription-settings header .back:focus {
+  outline: none;
+}
+#subscription-settings ul {
+  box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
+  margin-top: 4rem;
+}
+#subscription-settings ul li {
+  padding: 1rem 2rem;
+  font-size: 0.9rem;
+}
+#subscription-settings ul li:nth-child(even) {
+  background-color: #eff1f4;
+}
+#subscription-settings ul li ion-icon {
+  float: right;
+}
+#subscription-settings ul li.active {
+  background-color: #aed581;
+}
+
 #account-settings {
   z-index: 10;
   position: fixed;
