--- a/src/assets/scss/screen.scss
+++ b/src/assets/scss/screen.scss
@@ -9,6 +9,7 @@
 @use "./components/searchbar";
 @use "./components/settings";
 @use "./components/usersettings";
+@use "./components/map";
 
 @import "./variables";
 
