--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -1231,10 +1231,10 @@ body {
 }
 
 body main #map {
-  background-color: #7ac142;
+  background-color: black;
   width: 100%;
   height: 100vh;
-  z-index: 1;
+  z-index: 0;
 }
 
 body {
