--- a/src/assets/scss/components/_map.scss
+++ b/src/assets/scss/components/_map.scss
@@ -5,8 +5,8 @@ body {
 }
 
 body main #map {
-  background-color: #7ac142;
+  background-color: black;
   width: 100%;
   height: 100vh;
-  z-index: 1;
+  z-index: 0;
 }
