Added current subscription to quick access

--- a/src/assets/scss/screen.scss
+++ b/src/assets/scss/screen.scss
@@ -10,6 +10,7 @@
 @use "./components/settings";
 @use "./components/subscription";
 @use "./components/usersettings";
+@use "./components/subscription-quick";
 
 @import "./variables";
 
