Implemented view for ordering package pods

--- a/src/assets/scss/screen.scss
+++ b/src/assets/scss/screen.scss
@@ -12,6 +12,7 @@
 @use "./components/usersettings";
 @use "./components/subscription-quick";
 @use "./components/map";
+@use "./components/package";
 
 @import "./variables";
 
