--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -1309,6 +1309,131 @@ body main #map {
   z-index: 0;
 }
 
+#package-order-view {
+  z-index: 10;
+  position: fixed;
+  top: 0;
+  left: 100%;
+  background-color: #fbfcff;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  transition: transform 0.3s ease-in-out;
+  will-change: transform;
+  padding: 3rem 2rem;
+}
+#package-order-view.active {
+  transform: translateX(-100%);
+}
+#package-order-view header {
+  position: relative;
+  padding: 8rem 0;
+  font-size: 2rem;
+  text-align: center;
+}
+#package-order-view header .back {
+  position: absolute;
+  left: 1rem;
+  bottom: 1rem;
+  width: 2rem;
+  height: 2rem;
+  border: 0;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 1rem;
+}
+#package-order-view header .back:focus {
+  outline: none;
+}
+#package-order-view .back {
+  position: absolute;
+  right: 2rem;
+  top: 3rem;
+  width: 2rem;
+  height: 2rem;
+  border: 0;
+  background-color: transparent;
+  font-weight: bold;
+  font-size: 1.5rem;
+}
+#package-order-view img {
+  width: 100%;
+  padding-top: 3rem;
+  padding-bottom: 1.5rem;
+  align-self: center;
+}
+#package-order-view #package-title {
+  background-color: transparent;
+  border: 0;
+  color: #656769;
+  font-weight: bold;
+  font-size: 1.8rem;
+  margin: 0.5rem 0 1.5rem;
+}
+#package-order-view:focus {
+  outline: none;
+}
+#package-order-view form {
+  display: flex;
+  flex-flow: column nowrap;
+  height: 100%;
+}
+#package-order-view form h2 {
+  padding-top: 1rem;
+}
+#package-order-view form label {
+  font-family: "Montserrat", sans-serif;
+}
+#package-order-view form ion-icon {
+  color: #ee4949;
+  align-self: center;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+#package-order-view form .btn-group {
+  padding: 0.5rem 0;
+}
+#package-order-view form .btn-group.first {
+  margin-top: 5rem;
+}
+#package-order-view form .package-location:first-child {
+  padding-top: 1rem;
+}
+#package-order-view form #package-pod-pricing {
+  font-size: 1.1rem;
+  margin: auto 0 0;
+}
+#package-order-view form #package-pod-pricing span {
+  font-size: 1.3rem;
+  font-weight: bold;
+  float: right;
+}
+#package-order-view form input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+#package-order-view form input[type=submit] {
+  margin-top: 5rem;
+  border: 0;
+  padding: 0.7rem 1rem;
+  border-radius: 3rem;
+  box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
+  box-sizing: border-box;
+  padding: 1.5rem;
+  background-color: #aed581;
+}
+#package-order-view form input[type=submit]:focus {
+  outline: none;
+}
+#package-order-view form h2 {
+  font-weight: normal;
+}
+
 body {
   background-color: #fbfcff;
   width: 100vw;
