--- a/src/assets/scss/components/_recent-trip.scss
+++ b/src/assets/scss/components/_recent-trip.scss
@@ -1,7 +1,12 @@
 @import '../variables';
 
 #recent-trips {
-    padding: 0 2rem;
+    margin-top: 1rem;
+
+    & > h2 {
+        margin-left: 2rem;
+    }
+
     ul {
         display: flex;
         flex-direction: row;
@@ -18,6 +23,10 @@
             border: 1px solid lighten($text-primary, 20%);
             flex-shrink: 0;
             margin-right: 1rem;
+
+            &:first-child {
+                margin-left: 2rem;
+            }
 
             h2 {
                 font-weight: 700;
