--- a/src/assets/scss/components/_searchbar.scss
+++ b/src/assets/scss/components/_searchbar.scss
@@ -12,6 +12,12 @@
     border-radius: 1rem;
     box-shadow: 0 0px 1.8px rgba(0, 0, 0, 0.111), 0 0px 5px rgba(0, 0, 0, 0.16), 0 0px 12.1px rgba(0, 0, 0, 0.209), 0 0px 40px rgba(0, 0, 0, 0.32);
     box-sizing: border-box;
+    transition: transform 0.3s ease-in-out;
+
+    &.quick-access-open {
+        z-index: 3;
+        transform: translate(-50%, 3rem);
+    }
 
     label {
         position: absolute;
