--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -1380,6 +1380,7 @@ body main #map {
 }
 #package-order-view form h2 {
   padding-top: 1rem;
+  font-weight: normal;
 }
 #package-order-view form label {
   font-family: "Montserrat", sans-serif;
@@ -1408,7 +1409,7 @@ body main #map {
   font-weight: bold;
   float: right;
 }
-#package-order-view form input[type=text] {
+#package-order-view form .endpointSelect {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -1430,8 +1431,21 @@ body main #map {
 #package-order-view form input[type=submit]:focus {
   outline: none;
 }
-#package-order-view form h2 {
-  font-weight: normal;
+#package-order-view form .packageSearch {
+  background-color: #fbfcff;
+}
+#package-order-view form .packageSearch ul {
+  position: relative;
+  max-height: 12rem;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in-out;
+}
+#package-order-view form .packageSearch ul li {
+  padding: 0.5rem 0.75rem;
+  font-size: 0.9rem;
+}
+#package-order-view form .packageSearch ul li:nth-child(even) {
+  background-color: #eff1f4;
 }
 
 body {
