--- a/src/assets/scss/components/_package.scss
+++ b/src/assets/scss/components/_package.scss
@@ -45,6 +45,7 @@
 
     h2 {
       padding-top: 1rem;
+      font-weight: normal;
     }
 
     label {
@@ -57,6 +58,7 @@
       padding-top: 0.5rem;
       padding-bottom: 0.5rem;
     }
+
     .btn-group {
       padding: 0.5rem 0;
 
@@ -80,7 +82,7 @@
       }
     }
 
-    input[type="text"] {
+    .endpointSelect {
       width: 100%;
       padding: 12px 20px;
       margin: 8px 0;
@@ -97,8 +99,25 @@
       background-color: util.$accent-green;
     }
 
-    h2 {
-      font-weight: normal;
+    .packageSearch{
+      background-color: util.$background-primary;
+
+      ul {
+        position: relative;
+        max-height: 12rem;
+        overflow: hidden;
+        transition: max-height 0.3s ease-in-out;
+
+        li {
+          padding: 0.5rem 0.75rem;
+          font-size: .9rem;
+
+          &:nth-child(even) {
+            background-color: util.$background-secondary;
+          }
+        }
+      }
     }
+
   }
 }
