--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -43,7 +43,7 @@
   outline: none;
 }
 #authentication header .globe {
-  box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 5px rgba(0, 0, 0, 0.028), 0 4px 10px rgba(0, 0, 0, 0.035), 0 8px 18px rgba(0, 0, 0, 0.042), 0 15px 33px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
   background-color: black;
   background: radial-gradient(circle at 36% -17%, #ee4949, #000);
   background-size: 200%;
@@ -330,7 +330,7 @@
 }
 #friends-settings > ul {
   width: 100%;
-  box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 5px rgba(0, 0, 0, 0.028), 0 4px 10px rgba(0, 0, 0, 0.035), 0 8px 18px rgba(0, 0, 0, 0.042), 0 15px 33px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
 }
 #friends-settings > ul .user-icon {
   border-radius: 50%;
@@ -495,7 +495,7 @@
 }
 
 #main-notification {
-  box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 5px rgba(0, 0, 0, 0.028), 0 4px 10px rgba(0, 0, 0, 0.035), 0 8px 18px rgba(0, 0, 0, 0.042), 0 15px 33px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
   position: fixed;
   overflow: hidden;
   bottom: 15rem;
@@ -539,7 +539,7 @@
   box-sizing: border-box;
 }
 #notifications .notification {
-  box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 5px rgba(0, 0, 0, 0.028), 0 4px 10px rgba(0, 0, 0, 0.035), 0 8px 18px rgba(0, 0, 0, 0.042), 0 15px 33px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
   margin-top: 0.5rem;
   position: relative;
   display: flex;
@@ -779,7 +779,7 @@
 }
 #pod-order-view form #pod-select {
   border-radius: 1rem;
-  box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 5px rgba(0, 0, 0, 0.028), 0 4px 10px rgba(0, 0, 0, 0.035), 0 8px 18px rgba(0, 0, 0, 0.042), 0 15px 33px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
   margin-top: 0.5rem;
   overflow: hidden;
   display: flex;
@@ -838,7 +838,7 @@
   display: flex;
   flex-direction: row;
   overflow-x: scroll;
-  margin: 1rem 0;
+  padding: 2rem 0;
 }
 #recent-trips ul li {
   width: 12rem;
@@ -847,9 +847,9 @@
   padding: 0.5rem;
   border-radius: 1rem;
   box-sizing: border-box;
-  border: 1px solid #989a9c;
   flex-shrink: 0;
   margin-right: 1rem;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.02), 0 2px 5px rgba(0, 0, 0, 0.028), 0 4px 10px rgba(0, 0, 0, 0.035), 0 8px 18px rgba(0, 0, 0, 0.042), 0 15px 33px rgba(0, 0, 0, 0.07);
 }
 #recent-trips ul li:first-child {
   margin-left: 2rem;
@@ -869,7 +869,7 @@
   padding: 0.3rem 0.5rem 0.5rem;
   left: 0;
   width: calc(100% - 1rem);
-  border-top: 1px solid #989a9c;
+  border-top: 1px solid #e6e7e7;
   font-size: 0.8rem;
 }
 #recent-trips ul li div .to {
@@ -1149,7 +1149,7 @@
   text-align: center;
 }
 #settings ul {
-  box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 5px rgba(0, 0, 0, 0.028), 0 4px 10px rgba(0, 0, 0, 0.035), 0 8px 18px rgba(0, 0, 0, 0.042), 0 15px 33px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
   margin-top: 4rem;
 }
 #settings ul li {
@@ -1199,7 +1199,7 @@
   outline: none;
 }
 #subscription-settings ul {
-  box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 5px rgba(0, 0, 0, 0.028), 0 4px 10px rgba(0, 0, 0, 0.035), 0 8px 18px rgba(0, 0, 0, 0.042), 0 15px 33px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
   margin-top: 4rem;
 }
 #subscription-settings ul li {
@@ -1259,7 +1259,7 @@
   outline: none;
 }
 #account-settings ul {
-  box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 5px rgba(0, 0, 0, 0.028), 0 4px 10px rgba(0, 0, 0, 0.035), 0 8px 18px rgba(0, 0, 0, 0.042), 0 15px 33px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
 }
 #account-settings ul li {
   padding: 1rem 2rem;
@@ -1487,6 +1487,15 @@ body {
   color: #656769;
 }
 
+.leaflet-routing-alternatives-container {
+  display: none;
+}
+
+.animate-route {
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+}
+
 a {
   color: #ee4949;
   font-weight: bold;
@@ -1499,6 +1508,12 @@ h1, h2, h3, h4, h5, h6 {
 
 .hidden {
   display: none;
+}
+
+@keyframes test {
+  to {
+    stroke-dashoffset: 0;
+  }
 }
 
 /*# sourceMappingURL=screen.css.map */
