--- a/src/assets/scss/components/_recent-trip.scss
+++ b/src/assets/scss/components/_recent-trip.scss
@@ -1,4 +1,4 @@
-@import '../variables';
+@use '../util';
 
 #recent-trips {
     margin-top: 1rem;
@@ -11,7 +11,7 @@
         display: flex;
         flex-direction: row;
         overflow-x: scroll;
-        margin: 1rem 0;
+        padding: 2rem 0;
 
         li {
             width: 12rem;
@@ -20,9 +20,14 @@
             padding: 0.5rem;
             border-radius: 1rem;
             box-sizing: border-box;
-            border: 1px solid lighten($text-primary, 20%);
             flex-shrink: 0;
             margin-right: 1rem;
+            box-shadow:
+                0 1px 4px rgba(0, 0, 0, 0.02),
+                0 2px 5px rgba(0, 0, 0, 0.028),
+                0 4px 10px rgba(0, 0, 0, 0.035),
+                0 8px 18px rgba(0, 0, 0, 0.042),
+                0 15px 33px rgba(0, 0, 0, 0.07);
 
             &:first-child {
                 margin-left: 2rem;
@@ -45,7 +50,7 @@
                 padding: .3rem .5rem .5rem;
                 left: 0;
                 width: calc(100% - 1rem);
-                border-top: 1px solid lighten($text-primary, 20%);
+                border-top: 1px solid lighten(util.$text-primary, 50%);
                 font-size: 0.8rem;
 
                 .to {
