--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 #authentication {
   background-color: #0d0e0e !important;
   background-image: url(../images/noise.png);
@@ -950,7 +951,7 @@
   margin-bottom: 1rem;
 }
 #quick-access #logout {
-  margin-top: 13rem;
+  margin-top: 5rem;
 }
 
 #report {
@@ -1306,12 +1307,49 @@
 #account-settings ul li div input {
   text-align: left;
 }
+#account-settings ul li .custom-checkbox {
+  display: inline-flex;
+  cursor: pointer;
+  position: relative;
+}
+#account-settings ul li .custom-checkbox span {
+  color: #34495E;
+  padding: 0.5rem 0.25rem;
+}
+#account-settings ul li .custom-checkbox input {
+  height: 25px;
+  width: 25px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border: 1px solid #ee4949;
+  border-radius: 4px;
+  outline: none;
+  transition-duration: 0.3s;
+  background-color: #fbfcff;
+  cursor: pointer;
+}
+#account-settings ul li .custom-checkbox input:checked {
+  border: 1px solid #ee4949;
+}
+#account-settings ul li .custom-checkbox input:active {
+  border: 2px solid #ee4949;
+}
+#account-settings ul li .custom-checkbox input:checked + span::before {
+  content: "✓";
+  display: block;
+  text-align: center;
+  color: #ee4949;
+  position: absolute;
+  left: 0.7rem;
+}
 #account-settings > button:last-of-type {
   border: 0;
   padding: 0.7rem 1rem;
   border-radius: 3rem;
   box-shadow: 0 1px 2.2px rgba(0, 0, 0, 0.02), 0 2.3px 5.3px rgba(0, 0, 0, 0.028), 0 4.4px 10px rgba(0, 0, 0, 0.035), 0 7.8px 17.9px rgba(0, 0, 0, 0.042), 0 14.6px 33.4px rgba(0, 0, 0, 0.05), 0 35px 80px rgba(0, 0, 0, 0.07);
   box-sizing: border-box;
+  margin-top: 2rem;
   background-color: #aed581;
   font-weight: bold;
   color: #fbfcff;
