--- a/src/assets/scss/components/_usersettings.scss
+++ b/src/assets/scss/components/_usersettings.scss
@@ -66,11 +66,51 @@
                     text-align: left;
                 }
             }
+
+            .custom-checkbox{
+                display: inline-flex;
+                cursor: pointer;
+                position: relative;
+                span{
+                    color: #34495E;
+                    padding: 0.5rem 0.25rem;
+                }
+                input{
+                    height: 25px;
+                    width: 25px;
+                    -webkit-appearance: none;
+                    -moz-appearance: none;
+                    appearance: none;
+                    border: 1px solid variables.$accent-red;
+                    border-radius: 4px;
+                    outline: none;
+                    transition-duration: 0.3s;
+                    background-color: variables.$background-primary;
+                    cursor: pointer;
+                    &:checked{
+                        border: 1px solid variables.$accent-red;
+                    }
+                    &:active{
+                        border: 2px solid variables.$accent-red;
+                    }
+
+                }
+                input:checked + span::before{
+                    content: '\2713';
+                    display: block;
+                    text-align: center;
+                    color: variables.$accent-red;
+                    position: absolute;
+                    left: 0.7rem;
+                }
+            }
+
         }
     }
 
     & > button:last-of-type {
         @include util.button;
+        margin-top: 2rem;
         background-color: variables.$accent-green;
         font-weight: bold;
         color: variables.$background-primary;
