--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -1269,6 +1269,7 @@
   padding: 1rem 2rem;
   font-size: 0.9rem;
   display: flex;
+  align-items: center;
 }
 #account-settings ul li:nth-child(even) {
   background-color: #eff1f4;
@@ -1378,6 +1379,34 @@ body main #map {
   width: 100%;
   height: 100vh;
   z-index: 0;
+}
+body main #map .leaflet-control-zoom {
+  margin-bottom: calc(25vh + 29px + 1rem);
+}
+
+#current-location {
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+  display: block;
+  width: 29px;
+  height: 29px;
+  margin-right: 12px;
+  z-index: 0;
+  margin-bottom: calc(25vh + 1rem);
+}
+#current-location span {
+  display: block;
+  height: 18px;
+  left: 6px;
+  margin: 0;
+  padding: 0;
+  position: absolute;
+  top: 6px;
+  width: 18px;
+  background-image: url("../../assets/images/currentLoc-sprite.png");
+  background-size: 180px 18px;
+  background-position: -36px 0;
 }
 
 #package-order-view {
