--- a/src/assets/scss/components/_map.scss
+++ b/src/assets/scss/components/_map.scss
@@ -9,4 +9,34 @@ body main #map {
   width: 100%;
   height: 100vh;
   z-index: 0;
+
+  .leaflet-control-zoom {
+    margin-bottom: calc(25vh + 29px + 1rem);
+  }
+}
+
+#current-location {
+  background-color: rgba(255, 255, 255, 1);
+  border-radius: 8px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+  display: block;
+  width: 29px;
+  height: 29px;
+  margin-right: 12px;
+  z-index: 0;
+  margin-bottom: calc(25vh + 1rem);
+
+  span {
+    display: block;
+    height: 18px;
+    left: 6px;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    top: 6px;
+    width: 18px;
+    background-image: url("../../assets/images/currentLoc-sprite.png");
+    background-size: 180px 18px;
+    background-position: -36px 0 ;
+  }
 }
