--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -243,11 +243,15 @@
 #friendlist ul {
   display: flex;
   overflow-y: scroll;
+  margin-bottom: 1rem;
 }
 #friendlist ul li {
   flex-shrink: 0;
   margin: 1rem 0;
   text-align: center;
+}
+#friendlist ul li h2 {
+  margin: 0 auto;
 }
 #friendlist ul li .user-icon {
   border-radius: 50%;
@@ -829,19 +833,61 @@
   font-weight: normal;
 }
 
-#recent-trips {
+#trips {
   margin-top: 1rem;
 }
-#recent-trips > h2 {
+#trips > h2 {
   margin-left: 2rem;
+  margin-bottom: 1rem;
 }
-#recent-trips ul {
+#trips #change-trips {
+  margin-left: 2rem;
+  background-color: #eff1f4;
+  height: 3rem;
+  width: calc(100% - 4rem);
+  border-radius: 25px;
+  color: #656769;
+  margin-top: 0.2rem;
+  display: flex;
+  position: relative;
+  box-sizing: border-box;
+}
+#trips #change-trips input {
+  position: absolute;
+  visibility: hidden;
+}
+#trips #change-trips label {
+  flex-grow: 1;
+  box-sizing: border-box;
+  margin: 0.2rem;
+  display: block;
+  border-radius: 25px;
+  text-align: center;
+  z-index: 2;
+  line-height: 2.6rem;
+}
+#trips #change-trips::after {
+  content: "";
+  position: absolute;
+  width: 50%;
+  box-sizing: border-box;
+  margin: 0.2rem;
+  background-color: #fbfcff;
+  height: calc(100% - 0.4rem);
+  border-radius: 25px;
+  z-index: 1;
+  transition: transform 0.3s ease-in-out;
+}
+#trips #change-trips.favourite::after {
+  transform: translateX(calc(100% - 0.4rem));
+}
+#trips ul {
   display: flex;
   flex-direction: row;
   overflow-x: scroll;
   padding: 2rem 0;
 }
-#recent-trips ul li {
+#trips ul li {
   width: 12rem;
   height: 5rem;
   position: relative;
@@ -852,18 +898,18 @@
   margin-right: 1rem;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.02), 0 2px 5px rgba(0, 0, 0, 0.028), 0 4px 10px rgba(0, 0, 0, 0.035), 0 8px 18px rgba(0, 0, 0, 0.042), 0 15px 33px rgba(0, 0, 0, 0.07);
 }
-#recent-trips ul li:first-child {
+#trips ul li:first-child {
   margin-left: 2rem;
 }
-#recent-trips ul li h2 {
+#trips ul li h2 {
   font-weight: 700;
   font-size: 0.9rem;
 }
-#recent-trips ul li h3 {
+#trips ul li h3 {
   font-size: 0.85rem;
   font-weight: normal;
 }
-#recent-trips ul li div {
+#trips ul li div {
   display: flex;
   position: absolute;
   bottom: 0;
@@ -873,17 +919,17 @@
   border-top: 1px solid #e6e7e7;
   font-size: 0.8rem;
 }
-#recent-trips ul li div .to {
+#trips ul li div .to {
   margin-left: 1.2rem;
   position: relative;
   font-weight: bold;
 }
-#recent-trips ul li div .to::before {
+#trips ul li div .to::before {
   content: "-";
   position: absolute;
   left: -0.75rem;
 }
-#recent-trips ul li div p:last-child {
+#trips ul li div p:last-child {
   margin-left: auto;
   display: block;
 }
@@ -951,7 +997,7 @@
   margin-bottom: 1rem;
 }
 #quick-access #logout {
-  margin-top: 5rem;
+  margin-top: auto;
 }
 
 #report {
