--- a/src/assets/scss/components/_recent-trip.scss
+++ b/src/assets/scss/components/_recent-trip.scss
@@ -1,10 +1,54 @@
 @use '../util';
 
-#recent-trips {
+#trips {
     margin-top: 1rem;
 
     & > h2 {
         margin-left: 2rem;
+        margin-bottom: 1rem;
+    }
+
+    #change-trips{
+        margin-left: 2rem;
+        background-color: util.$background-secondary;
+        height: 3rem;
+        width: calc(100% - 4rem);
+        border-radius: 25px;
+        color: util.$text-primary;
+        margin-top: 0.2rem;
+        display: flex;
+        position: relative;
+        box-sizing: border-box;
+        input{
+            position: absolute;
+            visibility: hidden;
+        }
+
+        label{
+            flex-grow: 1;
+            box-sizing: border-box;
+            margin: 0.2rem;
+            display: block;
+            border-radius: 25px;
+            text-align: center;
+            z-index: 2;
+            line-height: 2.6rem;
+        }
+        &::after{
+            content: "";
+            position: absolute;
+            width: 50%;
+            box-sizing: border-box;
+            margin: 0.2rem;
+            background-color: util.$background-primary;
+            height: calc(100% - 0.4rem);
+            border-radius: 25px;
+            z-index: 1;
+            transition: transform 0.3s ease-in-out;
+        }
+        &.favourite::after{
+            transform: translateX(calc(100% - 0.4rem));
+        }
     }
 
     ul {
