--- a/src/assets/scss/components/_pod-order.scss
+++ b/src/assets/scss/components/_pod-order.scss
@@ -29,6 +29,44 @@
       font-family: "Montserrat", sans-serif;
     }
 
+    .custom-checkbox{
+      display: inline-flex;
+      cursor: pointer;
+      position: relative;
+      span{
+        color: #34495E;
+        padding: 0.5rem 0.25rem;
+      }
+      input{
+        height: 25px;
+        width: 25px;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        border: 1px solid util.$accent-red;
+        border-radius: 4px;
+        outline: none;
+        transition-duration: 0.3s;
+        background-color: util.$background-primary;
+        cursor: pointer;
+        &:checked{
+          border: 1px solid util.$accent-red;
+        }
+        &:active{
+          border: 2px solid util.$accent-red;
+        }
+
+      }
+      input:checked + span::before{
+        content: '\2713';
+        display: block;
+        text-align: center;
+        color: util.$accent-red;
+        position: absolute;
+        left: 0.7rem;
+      }
+    }
+
     input:disabled {
       background-color: transparent;
       border: 0;
