--- a/src/assets/scss/screen.scss
+++ b/src/assets/scss/screen.scss
@@ -9,6 +9,7 @@
 @use "./components/searchbar";
 @use "./components/settings";
 @use "./components/subscription";
+@use "./components/travel-view";
 @use "./components/usersettings";
 @use "./components/subscription-quick";
 @use "./components/map";
