--- a/src/assets/scss/components/_quick-access.scss
+++ b/src/assets/scss/components/_quick-access.scss
@@ -13,6 +13,73 @@
     transform: translateY(0);
     will-change: transform;
 
+    &:not(.transport) {
+        .transport {
+            display: none;
+        }
+    }
+
+    &.transport {
+        & > *:not(header):not(.transport) {
+            display: none;
+        }
+
+        header {
+
+            .transport {
+                position: absolute;
+                display: flex;
+                top: -1.5rem;
+                left: 0;
+                width: 100%;
+                background-color: util.$background-primary;
+                z-index: -1;
+                height: 3rem;
+                padding: 0.5rem;
+                box-sizing: border-box;
+                border-radius: 1rem 1rem 0 0;
+
+                .timeline {
+                    position: relative;
+                    flex-grow: 1;
+                    height: 2px;
+                    margin: 0.5rem 1rem;
+                    background-color: util.$text-secondary;
+
+                    &::before, &::after {
+                        content: '';
+                        position: absolute;
+                        top: -5px;
+                        border-radius: 50%;
+                        border: 2px solid util.$background-secondary;
+                        width: 0.5rem;
+                        height: 0.5rem;
+                        background-color: util.$text-secondary;
+                    }
+
+                    &::before {
+                        left: 0;
+                    }
+
+                    &::after {
+                        right: 0;
+                    }
+                }
+
+                &::after {
+                    content: "";
+                    position: absolute;
+                    bottom: 0;
+                    width: 100%;
+                    height: 1rem;
+                    background-color: util.$background-primary;
+                    left: 0;
+                    border-radius: 1rem 1rem 0 0;
+                }
+            }
+        }
+    }
+
     &:not(.active) {
         transform: translateY(75vh);
         border-radius: 1rem 1rem 0 0;
