--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -1410,6 +1410,52 @@ body main #map .leaflet-control-zoom {
   background-position: -36px 0;
 }
 
+.legend {
+  padding: 6px 8px;
+  font: 14px Arial, Helvetica, sans-serif;
+  background: white;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  line-height: 24px;
+  color: #555;
+  margin-bottom: calc(25vh + 29px + 1rem) !important;
+}
+.legend h4 {
+  text-align: center;
+  font-size: 16px;
+  margin: 2px 12px 8px;
+  color: #777;
+}
+.legend div {
+  display: flex;
+  height: 41px;
+}
+.legend div + div {
+  margin-top: 5px;
+}
+.legend div span {
+  position: relative;
+  align-self: center;
+}
+.legend div i {
+  width: 25px;
+  height: 41px;
+  float: left;
+  margin: 0 8px 0 0;
+}
+.legend .green-icon {
+  background-image: url("../../assets/images/markers/marker-icon-green.png");
+}
+.legend .blue-icon {
+  background-image: url("../../assets/images/markers/marker-icon-blue.png");
+}
+.legend .red-icon {
+  background-image: url("../../assets/images/markers/marker-icon-red.png");
+}
+.legend .yellow-icon {
+  background-image: url("../../assets/images/markers/marker-icon-yellow.png");
+}
+
 #package-order-view {
   z-index: 10;
   position: fixed;
