--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -1381,7 +1381,7 @@ body main #map {
   z-index: 0;
 }
 body main #map .leaflet-control-zoom {
-  margin-bottom: calc(25vh + 29px + 1rem);
+  margin-bottom: calc(25vh + 1rem + 29px + 22px);
 }
 
 #current-location {
@@ -1393,21 +1393,43 @@ body main #map .leaflet-control-zoom {
   height: 29px;
   margin-right: 12px;
   z-index: 0;
-  margin-bottom: calc(25vh + 1rem);
   pointer-events: auto;
+  margin-bottom: calc(25vh + 1rem);
 }
 #current-location span {
   display: block;
-  height: 18px;
-  left: 6px;
-  margin: 0;
-  padding: 0;
   position: absolute;
-  top: 6px;
   width: 18px;
+  height: 18px;
   background-image: url("../../assets/images/currentLoc-sprite.png");
   background-size: 180px 18px;
   background-position: -36px 0;
+  top: 6px;
+  left: 6px;
+}
+
+#show-legend {
+  background-color: white;
+  border-radius: 8px;
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+  display: block;
+  width: 29px;
+  height: 29px;
+  margin-right: 12px;
+  z-index: 0;
+  pointer-events: auto;
+  margin-bottom: calc(25vh + 1rem + 29px + 5px);
+}
+#show-legend ion-icon {
+  display: block;
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  color: black;
+  width: 27px;
+  height: 27px;
+  top: 1px;
+  left: 1px;
 }
 
 .legend {
@@ -1418,7 +1440,7 @@ body main #map .leaflet-control-zoom {
   border-radius: 5px;
   line-height: 24px;
   color: #555;
-  margin-bottom: calc(25vh + 29px + 1rem) !important;
+  margin-bottom: calc(25vh + 1rem) !important;
 }
 .legend h4 {
   text-align: center;
