--- a/src/assets/scss/components/_map.scss
+++ b/src/assets/scss/components/_map.scss
@@ -11,11 +11,11 @@ body main #map {
   z-index: 0;
 
   .leaflet-control-zoom {
-    margin-bottom: calc(25vh + 29px + 1rem);
+    margin-bottom: calc(25vh + 1rem + 29px + 22px);
   }
 }
 
-#current-location {
+@mixin map-button {
   background-color: rgba(255, 255, 255, 1);
   border-radius: 8px;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
@@ -24,21 +24,41 @@ body main #map {
   height: 29px;
   margin-right: 12px;
   z-index: 0;
-  margin-bottom: calc(25vh + 1rem);
   pointer-events: auto;
+}
+
+@mixin map-button-icon {
+  display: block;
+  position: absolute;
+  width: 18px;
+  height: 18px;
+}
+
+#current-location {
+  @include map-button;
+  margin-bottom: calc(25vh + 1rem);
 
   span {
-    display: block;
-    height: 18px;
-    left: 6px;
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    top: 6px;
-    width: 18px;
+    @include map-button-icon;
     background-image: url("../../assets/images/currentLoc-sprite.png");
     background-size: 180px 18px;
     background-position: -36px 0;
+    top: 6px;
+    left: 6px;
+  }
+}
+
+#show-legend {
+  @include map-button;
+  margin-bottom: calc(25vh + 1rem + 29px + 5px);
+
+  ion-icon {
+    @include map-button-icon;
+    color: black;
+    width: 27px;
+    height: 27px;
+    top: 1px;
+    left: 1px;
   }
 }
 
@@ -51,7 +71,7 @@ body main #map {
   border-radius: 5px;
   line-height: 24px;
   color: #555;
-  margin-bottom: calc(25vh + 29px + 1rem) !important;
+  margin-bottom: calc(25vh + 1rem) !important;
 
   h4 {
     text-align: center;
@@ -69,7 +89,6 @@ body main #map {
     }
 
     span {
-
       position: relative;
       align-self: center;
     }
