--- a/src/assets/css/screen.css
+++ b/src/assets/css/screen.css
@@ -253,6 +253,9 @@
 #friendlist ul li h2 {
   margin: 0 auto;
 }
+#friendlist ul li h2 {
+  margin: 0 auto;
+}
 #friendlist ul li .user-icon {
   border-radius: 50%;
 }
@@ -1200,6 +1203,9 @@
   box-sizing: border-box;
   transition: transform 0.3s ease-in-out;
 }
+.searchbar ion-icon, .searchHomeEndpoint ion-icon {
+  float: right;
+}
 .searchbar.quick-access-open, .searchHomeEndpoint.quick-access-open {
   z-index: 3;
   transform: translate(-50%, 3rem);
@@ -1223,8 +1229,13 @@
   transition: max-height 0.3s ease-in-out;
 }
 .searchbar ul li, .searchHomeEndpoint ul li {
+  display: flex;
   padding: 0.5rem 0.75rem;
   font-size: 0.9rem;
+}
+.searchbar ul li h2, .searchHomeEndpoint ul li h2 {
+  flex-grow: 1;
+  font-weight: normal;
 }
 .searchbar ul li:nth-child(even), .searchHomeEndpoint ul li:nth-child(even) {
   background-color: #eff1f4;
