--- a/src/assets/scss/components/_searchbar.scss
+++ b/src/assets/scss/components/_searchbar.scss
@@ -14,6 +14,10 @@
     box-sizing: border-box;
     transition: transform 0.3s ease-in-out;
 
+    ion-icon {
+        float: right;
+    }
+
     &.quick-access-open {
         z-index: 3;
         transform: translate(-50%, 3rem);
@@ -41,8 +45,14 @@
         transition: max-height 0.3s ease-in-out;
 
         li {
+            display: flex;
             padding: 0.5rem 0.75rem;
             font-size: .9rem;
+
+            h2 {
+                flex-grow: 1;
+                font-weight: normal;
+            }
 
             &:nth-child(even) {
                 background-color: util.$background-secondary;
